@@ -1,0 +1,10 @@
+# Source and destination file names.
+test_source = "cyrillic.txt"
+test_destination = "xetex-cyrillic.tex"
+
+# Keyword parameters passed to publish_file.
+writer_name = "xetex"
+
+# Settings
+# settings_overrides['hyperref_options'] = 'unicode'
+settings_overrides['language_code'] = 'ru'
